...
    },
    "gym.detail.title": {
      "localizations": {
        "en-AU": {
          "stringUnit": {
            "state": "translated",
            "value": "Gym Detail"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "암장 상세"
...
    },
    "home.title": {
      "localizations": {
        "en-AU": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "홈"
...
    },
    "map.title": {
      "localizations": {
        "en-AU": {
          "stringUnit": {
            "state": "translated",
            "value": "Map"
          }
        },
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "지도"
...
